app/common/stylesheets/event.css
span {
  white-space: pre-wrap;
}

.event-icon {
  width: 70px;
  height: 70px;
}

.navigate-index {
  float: left;
  width: 90%;
  max-width: 100%;
}

#map-canvas span {
  white-space: nowrap;
}

/* styles for new.html page */

#form-error-card {
  border-color: red;
  border-style: solid;
  border-width: 1px;
  border-color: red;
}

#form-error-card > .item-text-wrap{
  color: red;
}

.error-input {
  border-color: red;
  border-style: solid;
  border-width: 2px;
}

/* styles for sort selector on main page */

.sort {
  padding-bottom: 40px;
  padding-left: 0px;
  padding-right: 0px;
  margin-bottom: 0px;
}

/* style for event type on new event page */

.event-type {
  padding-bottom: 30px;
  padding-left: 0px;
  padding-right: 0px;
  margin-bottom: 0px;
}

.event-type select {
  direction: ltr;
  width: 100%;
  max-width: 100%;
}

/* sytles for show.html page */

#event-divider {
  font-weight: bold;
  font-size: 1em;
  white-space: nowrap;
  height: 1.1em;
}

#showpage-heading {
  color: #666666;
}

